--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -2,10 +2,42 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "784a4563-2aca-4022-90ef-bfbb3d518f7e",
+   "id": "b1c36b4a-6214-4ba8-900d-d08f5ad76c22",
    "metadata": {},
    "source": [
-    "# Characteristics of Businesses - Group Exercise"
+    "# Annual Business Survey 2019\n",
+    "## Group Assessment - Module 08"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "784a4563-2aca-4022-90ef-bfbb3d518f7e",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61d62564-7f45-4d60-ae25-67ffeb0550f7",
+   "metadata": {},
+   "source": [
+    "## ETL Report\n",
+    "#### Introduction\n",
+    "\n",
+    "- In this portion, we will dicuss the problems or questions that we are trying to solve or answer. \n",
+    "    We will identify the sources of our data and describe why the data needs to be transformed.\n",
+    "    \n",
+    "#### Data Sources\n",
+    "\n",
+    "- In this portion we will be more specific about where we found the data, when we accessed it, and we will cite any sources.\n",
+    "\n",
+    "#### Extraction\n",
+    "\n",
+    "- In this portion we will show how we got our data, show aspects of the data consumption process and indicate the order of the process."
    ]
   },
   {
@@ -16,7 +48,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import requests\n",
     "\n",
     "tech_variables = 'https://api.census.gov/data/2018/abstcb/variables.html'\n",
     "owner_variables = 'https://api.census.gov/data/2018/abscbo/variables.html'\n",
