--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -111,6 +111,185 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "id": "1369eb22-c652-4075-afe9-3b465a85eaab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Tech Labels</th>\n",
+       "      <th>Owner Labels</th>\n",
+       "      <th>Characteristic Labels</th>\n",
+       "      <th>Company Summary Labels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>GEOCOMP</td>\n",
+       "      <td>GEO_ID Component</td>\n",
+       "      <td>GEO_ID Component</td>\n",
+       "      <td>GEO_ID Component</td>\n",
+       "      <td>GEO_ID Component</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>GEO_ID</td>\n",
+       "      <td>Geographic identifier code</td>\n",
+       "      <td>Geographic identifier code</td>\n",
+       "      <td>Geographic identifier code</td>\n",
+       "      <td>Geographic identifier code</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>NAICS2017</td>\n",
+       "      <td>2017 NAICS code</td>\n",
+       "      <td>2017 NAICS code</td>\n",
+       "      <td>2017 NAICS code</td>\n",
+       "      <td>2017 NAICS code</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>NATION</td>\n",
+       "      <td>Geography</td>\n",
+       "      <td>Geography</td>\n",
+       "      <td>Geography</td>\n",
+       "      <td>Geography</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>STATE</td>\n",
+       "      <td>Geography</td>\n",
+       "      <td>Geography</td>\n",
+       "      <td>Geography</td>\n",
+       "      <td>Geography</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>SUMLEVEL</td>\n",
+       "      <td>Summary Level code</td>\n",
+       "      <td>Summary Level code</td>\n",
+       "      <td>Summary Level code</td>\n",
+       "      <td>Summary Level code</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>YEAR</td>\n",
+       "      <td>Year</td>\n",
+       "      <td>Year</td>\n",
+       "      <td>Year</td>\n",
+       "      <td>Year</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>for</td>\n",
+       "      <td>Census API FIPS 'for' clause</td>\n",
+       "      <td>Census API FIPS 'for' clause</td>\n",
+       "      <td>Census API FIPS 'for' clause</td>\n",
+       "      <td>Census API FIPS 'for' clause</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>in</td>\n",
+       "      <td>Census API FIPS 'in' clause</td>\n",
+       "      <td>Census API FIPS 'in' clause</td>\n",
+       "      <td>Census API FIPS 'in' clause</td>\n",
+       "      <td>Census API FIPS 'in' clause</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>ucgid</td>\n",
+       "      <td>Uniform Census Geography Identifier clause</td>\n",
+       "      <td>Uniform Census Geography Identifier clause</td>\n",
+       "      <td>Uniform Census Geography Identifier clause</td>\n",
+       "      <td>Uniform Census Geography Identifier clause</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Name                                 Tech Labels  \\\n",
+       "10    GEOCOMP                            GEO_ID Component   \n",
+       "11     GEO_ID                  Geographic identifier code   \n",
+       "18  NAICS2017                             2017 NAICS code   \n",
+       "19     NATION                                   Geography   \n",
+       "36      STATE                                   Geography   \n",
+       "37   SUMLEVEL                          Summary Level code   \n",
+       "41       YEAR                                        Year   \n",
+       "43        for                Census API FIPS 'for' clause   \n",
+       "44         in                 Census API FIPS 'in' clause   \n",
+       "45      ucgid  Uniform Census Geography Identifier clause   \n",
+       "\n",
+       "                                  Owner Labels  \\\n",
+       "10                            GEO_ID Component   \n",
+       "11                  Geographic identifier code   \n",
+       "18                             2017 NAICS code   \n",
+       "19                                   Geography   \n",
+       "36                                   Geography   \n",
+       "37                          Summary Level code   \n",
+       "41                                        Year   \n",
+       "43                Census API FIPS 'for' clause   \n",
+       "44                 Census API FIPS 'in' clause   \n",
+       "45  Uniform Census Geography Identifier clause   \n",
+       "\n",
+       "                         Characteristic Labels  \\\n",
+       "10                            GEO_ID Component   \n",
+       "11                  Geographic identifier code   \n",
+       "18                             2017 NAICS code   \n",
+       "19                                   Geography   \n",
+       "36                                   Geography   \n",
+       "37                          Summary Level code   \n",
+       "41                                        Year   \n",
+       "43                Census API FIPS 'for' clause   \n",
+       "44                 Census API FIPS 'in' clause   \n",
+       "45  Uniform Census Geography Identifier clause   \n",
+       "\n",
+       "                        Company Summary Labels  \n",
+       "10                            GEO_ID Component  \n",
+       "11                  Geographic identifier code  \n",
+       "18                             2017 NAICS code  \n",
+       "19                                   Geography  \n",
+       "36                                   Geography  \n",
+       "37                          Summary Level code  \n",
+       "41                                        Year  \n",
+       "43                Census API FIPS 'for' clause  \n",
+       "44                 Census API FIPS 'in' clause  \n",
+       "45  Uniform Census Geography Identifier clause  "
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "possible_merge_options = grouped_tables[grouped_tables.apply(lambda x: not x.str.contains(\"-\").any(), axis = 1)]\n",
+    "possible_merge_options"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "id": "53a72b41-1cd7-4520-b4ae-37f75fa887c0",
    "metadata": {},
