--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -35,6 +35,11 @@
     "\n",
     "- In this portion we will be more specific about where we found the data, when we accessed it, and we will cite any sources.\n",
     "\n",
+    "\n",
+    "US Census Bureau. (2021b, October 14). *Annual Business Survey (ABS) APIs.* Census.Gov.\n",
+    "\n",
+    "Retrieved April 22, 2022, from https://www.census.gov/data/developers/data-sets/abs.2019.html\n",
+    "\n",
     "#### Extraction\n",
     "\n",
     "- In this portion we will show how we got our data, show aspects of the data consumption process and indicate the order of the process."
