--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -721,7 +721,7 @@
    ],
    "source": [
     "# First display all columns together\n",
-    "print(\"(Columns are sorted alphabetically...)\")\n",
+    "print(\"(This group indicates common columns...)\")\n",
     "for i,df in enumerate(df_collection):\n",
     "    print(f'DATAFRAME: {df_names[i]}\\n COMMON: {\", \".join(_ for _ in sorted(df.columns.tolist()) if _ in common_vars)}\\n')\n",
     "\n",
