--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -50,11 +50,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import explain # Helper for clarifying variable information (for questions about this, type \"help(explain)\" in a cell)\n",
     "\n",
     "tech_variables = 'https://api.census.gov/data/2018/abstcb/variables.html'\n",
     "owner_variables = 'https://api.census.gov/data/2018/abscbo/variables.html'\n",
     "characteristics_variables = 'https://api.census.gov/data/2018/abscb/variables.html'\n",
-    "company_summary_variables = 'https://api.census.gov/data/2018/abscs/variables.html'\n"
+    "company_summary_variables = 'https://api.census.gov/data/2018/abscs/variables.html'"
    ]
   },
   {
@@ -92,36 +93,7 @@
     }
    ],
    "source": [
-    "\n",
-    "# This is something I am slowly adding to. That way I don't have to scroll all the way up when I forgot what a dataframe is.\n",
-    "def what_is():\n",
-    "    df_information = {\n",
-    "        'grouped_tables': \"\"\"\n",
-    "            The variable ['grouped_tables'] references a dataframe consisting of\n",
-    "             all possible variables in the 4 datasets available in the ABS datahold.\n",
-    "             \n",
-    "             It is useful for determining which variables are in each dataset.\n",
-    "             \"\"\",\n",
-    "        'possible_merge_options': \"\"\"\n",
-    "            The variable ['possible_merge_options'] references a dataframe consisting of\n",
-    "             a smaller subset of the grouped_tables dataframe. It's purpose is to assist\n",
-    "             with determining which variables are common in all tables.\n",
-    "             \"\"\"\n",
-    "    }\n",
-    "    user_query = input('Which dataframe are you asking about? (partial and complete matches returned) >> ')\n",
-    "    requested_vars = []\n",
-    "    for key in df_information:\n",
-    "        if user_query.lower() in key.lower():\n",
-    "            requested_vars.append(df_information[key])\n",
-    "    if len(requested_vars) == 0:\n",
-    "        print(f'No matches found.\\nSome of the possibilities are {\", \".join(_ for _ in df_information.keys)} ')\n",
-    "    else:\n",
-    "        if len(requested_vars) > 1:\n",
-    "            print('\\nMultiple Matches Found')\n",
-    "        return_string = \"\\n\" + \"\\n\\n\".join(requested_vars)\n",
-    "        print(f'{return_string}')\n",
-    "        \n",
-    "#what_is()"
+    "\n"
    ]
   },
   {
