--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import explain # Helper for clarifying variable information (for questions about this, type \"help(explain)\" in a cell)\n",
+    "from utils import explain # Helper for clarifying variable information (for questions about this, type \"help(explain)\" in a cell)\n",
     "\n",
     "tech_variables = 'https://api.census.gov/data/2018/abstcb/variables.html'\n",
     "owner_variables = 'https://api.census.gov/data/2018/abscbo/variables.html'\n",
