--- a/jeds_visualizations.ipynb
+++ b/jeds_visualizations.ipynb
@@ -7,65 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import explain # Helper for clarifying dataframe information"
+    "from utils import explain # Helper for clarifying dataframe information"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "e941c6ac-021a-4c5f-9058-a9df10d87b4f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on module explain:\n",
-      "\n",
-      "NAME\n",
-      "    explain - This modue is intended to assist with clarifying any data or variables that are present in the notebook.\n",
-      "\n",
-      "DESCRIPTION\n",
-      "    It consists of a function that returns information based on key/value pairs. The key is the variable name, \n",
-      "    and the value is the explanation of that variable.\n",
-      "    \n",
-      "    The indicator before the variable explanation (i.e. \"DF -->\") refers to the type of object that is referenced.\n",
-      "    \n",
-      "    To use the function, just call explain.what_is() with no parameters.\n",
-      "\n",
-      "FUNCTIONS\n",
-      "    what_is()\n",
-      "        Takes no parameters. Accepts user input and prints a response.\n",
-      "\n",
-      "FILE\n",
-      "    c:\\users\\work\\desktop\\python\\dev10\\assessments\\abs_group_assessment\\explain.py\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(explain)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "1c14ceac-5b34-4c18-b373-03f50d2e565c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function explain.what_is()>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
