--- a/jeds_visualizations.ipynb
+++ b/jeds_visualizations.ipynb
@@ -25,81 +25,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "97ccd604-079b-4910-b6b0-b9e748f1d2d1",
+   "execution_count": null,
+   "id": "3ae0d7a9-57ee-4f74-b485-dc2ea6bc443a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on module utils.explain in utils:\n",
-      "\n",
-      "NAME\n",
-      "    utils.explain - This modue is intended to assist with clarifying any data or variables that are present in the notebook.\n",
-      "\n",
-      "DESCRIPTION\n",
-      "    It consists of a function that returns information based on key/value pairs. The key is the variable name, \n",
-      "    and the value is the explanation of that variable. This is not a comprehensive dictionary of all variables, \n",
-      "    but will return the primary variables.\n",
-      "    \n",
-      "    The indicator before the variable explanation (i.e. \"DF -->\") refers to the type of object that is referenced.\n",
-      "    \n",
-      "    If you edit the information in this module, be aware that Python only reads imports on a first pass, \n",
-      "    so you will need to restart your kernel to see any changes.\n",
-      "    \n",
-      "    To use the function, just call explain.what_is() with no parameters.\n",
-      "\n",
-      "FUNCTIONS\n",
-      "    what_is()\n",
-      "        Takes no parameters. Accepts user input and prints a response.\n",
-      "\n",
-      "FILE\n",
-      "    c:\\users\\work\\desktop\\python\\dev10\\assessments\\abs_group_assessment\\utils\\explain.py\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "help(explain)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "571d0cb0-18ad-4e48-94cc-b223a70ccfbc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Blank Input returns all information.\n",
-      "Which dataframe are you asking about? (partial and complete matches returned) >>  blue\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No matches found.\n",
-      "Some of the possibilities are:\n",
-      "grouped_tables, possible_merge_options, common_vars, comp_sum_df, bus_char_df, bus_own_df, bus_tech_df, slbo \n"
-     ]
-    }
-   ],
-   "source": [
-    "explain.what_is()"
+    "def jeds_first_plot(comp_sum_df):\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import seaborn as sns\n",
+    "\n",
+    "    targ1 = 23\n",
+    "    targ2 = 52\n",
+    "    targ1,targ2 = str(targ1), str(targ2)\n",
+    "\n",
+    "    gender_by_state_cs = comp_sum_df[\n",
+    "        (comp_sum_df['industry_code'].isin([targ1, targ2]))\n",
+    "        ].groupby(by = ['name','industry','gender']\n",
+    "                 )[['gender']].agg('count').rename(columns = {'gender': 'gender_count'}).reset_index()\n",
+    "\n",
+    "    gender_by_state_cs.sort_values(by = ['name', 'industry', 'gender'], inplace = True)\n",
+    "    gs = gender_by_state_cs\n",
+    "\n",
+    "    print('NOTE: Ratios are for each set of observations and not industry specific.')\n",
+    "    print('Building Plots... Please Wait...')\n",
+    "    fig, axs = plt.subplots(51,1, figsize=(15,200), sharex = False)\n",
+    "    fig.suptitle('Ownership Gender in a Subset of Industries by State', fontsize = 30)\n",
+    "    colors = {'Female':'#FD6320','Male':'#9567FE', 'Equally male/female': '#919584'}\n",
+    "\n",
+    "    states = sorted(comp_sum_df.name.unique().tolist())\n",
+    "    for i, state in enumerate(states):\n",
+    "        axs[i].set_title(state, fontsize = 20)\n",
+    "\n",
+    "        subset = gs[\n",
+    "                (gs['name'] == state) &\n",
+    "                (gs['gender'] != 'Total')\n",
+    "            ] \n",
+    "        industries = sorted(subset.industry.unique().tolist())\n",
+    "        sns.barplot(data = subset, x = 'industry', y = 'gender_count', \n",
+    "                    ax = axs[i], hue = 'gender', \n",
+    "                    palette = colors, \n",
+    "                    edgecolor = 'black')\n",
+    "\n",
+    "        axs[i].set_ylabel('')\n",
+    "        axs[i].set_xlabel('')\n",
+    "\n",
+    "        font = {'color': 'w',\n",
+    "                'weight': 'bold',\n",
+    "                'size': 14,\n",
+    "               }\n",
+    "        if i % 3 == 0:\n",
+    "            axs[i].text(-0.36,0.65, \"Equal Gender\\nOwnership\", fontdict = font)\n",
+    "            axs[i].text(-0.05,0.65, \"Female\", fontdict = font)\n",
+    "            axs[i].text(0.23,0.65, \"Male\", fontdict = font)\n",
+    "\n",
+    "        axs[i].get_legend().remove()\n",
+    "        axs[i].tick_params(left = False)\n",
+    "        axs[i].set_yticklabels('')\n",
+    "\n",
+    "        gender_count = subset['gender_count'].sum()\n",
+    "        for c in axs[i].containers:\n",
+    "            labels = [\n",
+    "                f'{(h/gender_count)*100:0.1f}%' if (\n",
+    "                    h := v.get_height()) > 0 else \"\" for v in c\n",
+    "            ]\n",
+    "\n",
+    "            axs[i].bar_label(c,labels=labels,label_type = 'edge',fontsize = 17,color= 'black')\n",
+    "        axs[i].tick_params(axis = 'x', labelsize = 18)\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.subplots_adjust(hspace = 1,top = 0.97)\n",
+    "    sns.despine(left = True, bottom = True)\n",
+    "    print('Done... Displaying Plots...')\n",
+    "\n",
+    "    #plt.savefig('gender_ownership_state.pdf')\n",
+    "\n",
+    "# jeds_first_plot(comp_sum_df)  ## Uncomment to run the plot"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ae0d7a9-57ee-4f74-b485-dc2ea6bc443a",
+   "id": "c4ffe8b9-bc9d-4316-b68b-d990c9cedb91",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "reason_owned = bus_own_df[\n",
+    "    (bus_own_df['qdesc_label'] == 'REASONOWN') &\n",
+    "    (~bus_own_df['industry'].str.contains('Total')) &\n",
+    "    (~bus_own_df['gender'].str.contains('All')) &\n",
+    "    (bus_own_df['ownchar_label'].str.contains(':'))]\n",
+    "\n",
+    "reason_owned[['reason','importance']] = reason_owned.apply(\n",
+    "    lambda row: row['ownchar_label'].split(\":\"), axis = 1, result_type = 'expand'\n",
+    ")\n",
+    "\n",
+    "reason_owned = reason_owned[['industry','gender','reason','importance','ownpdemp']]\n",
+    "\n",
+    "grouped_reason = reason_owned.groupby(\n",
+    "    by = ['industry','reason','importance'])[['ownpdemp']].agg(\n",
+    "    responses = ('ownpdemp', 'sum')\n",
+    ")\n",
+    "\n",
+    "grouped_reason['ratio'] = 100 * (grouped_reason['responses'] / grouped_reason.groupby(level = [0,1])['responses'].transform('sum'))\n",
+    "\n",
+    "grouped_reason.reset_index(inplace = True)\n",
+    "\n",
+    "accom_subset = grouped_reason[(grouped_reason['industry'].str.contains('inanc'))]\n",
+    "accom_subset.sort_values(by = 'importance', inplace = True)\n",
+    "picked_industry = accom_subset['industry'].unique().tolist()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f5ef177-bb1a-4788-8aba-8f5019ef743b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "import numpy as np\n",
+    "\n",
+    "fig = px.bar(accom_subset, x = 'ratio', y = 'reason', color = 'importance',\n",
+    "            width = 1000, height = 600, orientation = 'h', title = picked_industry,\n",
+    "             hover_data = ['responses','ratio']\n",
+    "            )\n",
+    "fig.update_layout(yaxis_title = None)\n",
+    "fig.update_layout(xaxis_title = \"Percent of Total\")\n",
+    "\n",
+    "fig.update_yaxes(categoryorder = 'category descending', ticks = 'outside')\n",
+    "fig.update_xaxes(range = [0,100])\n",
+    "\n",
+    "fig.show()"
+   ]
   }
  ],
  "metadata": {
