--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "14a99328-662e-4daa-9995-fb54c457c978",
    "metadata": {},
    "outputs": [
@@ -869,172 +869,22 @@
       "\n",
       "DATAFRAME: slbo\n",
       "  COLUMNS: gender, geo_id, industry, industry_code, naics2017.1, name, ownchar.1, ownchar_label, owner_race_label, ownpdemp, qdesc.1, qdesc_label, state\n",
-      "\n",
-      "\n",
-      "############# NEW DATAFRAME ################\n",
-      "Displaying column value counts where there are fewer than 10 unique values in the column.\n",
-      "\n",
-      "---  DataFrame: comp_sum_df ---------------------\n",
-      "Columns: name, firmpdemp, geo_id, industry_code, industry, race_group_label, gender, yibszfi_label, state\n",
-      "Total                                         27311\n",
-      "White                                         11327\n",
-      "Nonminority                                   11320\n",
-      "Minority                                       9285\n",
-      "Asian                                          7748\n",
-      "Black or African American                      6433\n",
-      "Equally minority/nonminority                   6133\n",
-      "American Indian and Alaska Native              4509\n",
-      "Native Hawaiian and Other Pacific Islander     2126\n",
-      "Name: race_group_label, dtype: int64\n",
-      "\n",
-      "Total                  44001\n",
-      "Male                   15588\n",
-      "Female                 13737\n",
-      "Equally male/female    12866\n",
-      "Name: gender, dtype: int64\n",
-      "\n",
-      "All firms                                   27090\n",
-      "Firms with less than 2 years in business    10764\n",
-      "Firms with 16 or more years in business     10629\n",
-      "Firms with 6 to 10 years in business         9755\n",
-      "Firms with 11 to 15 years in business        9602\n",
-      "Firms with 2 to 3 years in business          9367\n",
-      "Firms with 4 to 5 years in business          8985\n",
-      "Name: yibszfi_label, dtype: int64\n",
-      "\n",
-      "############# END OF DATAFRAME INFO ################\n",
-      "\n",
-      "\n",
-      "\n",
-      "############# NEW DATAFRAME ################\n",
-      "Displaying column value counts where there are fewer than 10 unique values in the column.\n",
-      "\n",
-      "---  DataFrame: bus_char_df ---------------------\n",
-      "Columns: name, buschar_label, firmpdemp, geo_id, industry_code, industry, qdesc_label, race_group_label, gender, yibszfi_label, state\n",
-      "0    2295\n",
-      "Name: industry_code, dtype: int64\n",
-      "\n",
-      "Total for all sectors    2295\n",
-      "Name: industry, dtype: int64\n",
-      "\n",
-      "WORKERS     510\n",
-      "OWNRNUM     408\n",
-      "SPOUSES     408\n",
-      "CUST        408\n",
-      "FAMOWN      306\n",
-      "CEASEOPS    255\n",
-      "Name: qdesc_label, dtype: int64\n",
-      "\n",
-      "Total    2295\n",
-      "Name: race_group_label, dtype: int64\n",
-      "\n",
-      "Total    2295\n",
-      "Name: gender, dtype: int64\n",
-      "\n",
-      "All firms    2295\n",
-      "Name: yibszfi_label, dtype: int64\n",
-      "\n",
-      "############# END OF DATAFRAME INFO ################\n",
-      "\n",
-      "\n",
-      "\n",
-      "############# NEW DATAFRAME ################\n",
-      "Displaying column value counts where there are fewer than 10 unique values in the column.\n",
-      "\n",
-      "---  DataFrame: bus_own_df ---------------------\n",
-      "Columns: name, geo_id, industry_code, industry, ownchar_label, ownpdemp, qdesc_label, owner_race_label, gender\n",
-      "United States    46098\n",
-      "Name: name, dtype: int64\n",
-      "\n",
-      "0100000US    46098\n",
-      "Name: geo_id, dtype: int64\n",
-      "\n",
-      "REASONOWN      17732\n",
-      "FLDEDUC         7102\n",
-      "EDUC            4684\n",
-      "YRACQBUS        4308\n",
-      "OWNRAGE         3478\n",
-      "PRIORBUSTAT     3307\n",
-      "PRIMINC         1859\n",
-      "USBORN          1843\n",
-      "USCITIZEN       1785\n",
-      "Name: qdesc_label, dtype: int64\n",
-      "\n",
-      "All owners of respondent firms                6644\n",
-      "White                                         6639\n",
-      "Nonminority                                   6638\n",
-      "Minority                                      6345\n",
-      "Asian                                         5963\n",
-      "Black or African American                     5406\n",
-      "American Indian and Alaska Native             4905\n",
-      "Native Hawaiian and Other Pacific Islander    3558\n",
-      "Name: owner_race_label, dtype: int64\n",
-      "\n",
-      "All owners of respondent firms    15923\n",
-      "Male                              15512\n",
-      "Female                            14663\n",
-      "Name: gender, dtype: int64\n",
-      "\n",
-      "############# END OF DATAFRAME INFO ################\n",
-      "\n",
-      "\n",
-      "\n",
-      "############# NEW DATAFRAME ################\n",
-      "Displaying column value counts where there are fewer than 10 unique values in the column.\n",
-      "\n",
-      "---  DataFrame: bus_tech_df ---------------------\n",
-      "Columns: name, firmpdemp, geo_id, industry_code, industry, nsfszfi, nsfszfi_label, race_group_label, gender, techuse, techuse_label, state\n",
-      "1    42840\n",
-      "Name: nsfszfi, dtype: int64\n",
-      "\n",
-      "All firms    42840\n",
-      "Name: nsfszfi_label, dtype: int64\n",
-      "\n",
-      "Total    42840\n",
-      "Name: race_group_label, dtype: int64\n",
-      "\n",
-      "Total    42840\n",
-      "Name: gender, dtype: int64\n",
-      "\n",
-      "############# END OF DATAFRAME INFO ################\n",
-      "\n",
-      "\n",
-      "\n",
-      "############# NEW DATAFRAME ################\n",
-      "Displaying column value counts where there are fewer than 10 unique values in the column.\n",
-      "\n",
-      "---  DataFrame: slbo ---------------------\n",
-      "Columns: name, geo_id, industry_code, industry, ownchar_label, ownpdemp, qdesc_label, owner_race_label, gender, ownchar.1, naics2017.1, qdesc.1, state\n",
-      "0    51\n",
-      "Name: industry_code, dtype: int64\n",
-      "\n",
-      "Total for all sectors    51\n",
-      "Name: industry, dtype: int64\n",
-      "\n",
-      "Before 1980    51\n",
-      "Name: ownchar_label, dtype: int64\n",
-      "\n",
-      "YRACQBUS    51\n",
-      "Name: qdesc_label, dtype: int64\n",
-      "\n",
-      "All owners of respondent firms    51\n",
-      "Name: owner_race_label, dtype: int64\n",
-      "\n",
-      "All owners of respondent firms    51\n",
-      "Name: gender, dtype: int64\n",
-      "\n",
-      "CG    51\n",
-      "Name: ownchar.1, dtype: int64\n",
-      "\n",
-      "0    51\n",
-      "Name: naics2017.1, dtype: int64\n",
-      "\n",
-      "O02    51\n",
-      "Name: qdesc.1, dtype: int64\n",
-      "\n",
-      "############# END OF DATAFRAME INFO ################\n",
-      "\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data1/comp_sum_df.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_29752/1048868451.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdf\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_collection\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m     \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'data1/{df_names[i]}.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\n############# NEW DATAFRAME ################'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Displaying column value counts where there are fewer than 10 unique values in the column.'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, sep, na_rep, float_format, columns, header, index, index_label, mode, encoding, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, decimal, errors, storage_options)\u001b[0m\n\u001b[0;32m   3464\u001b[0m         )\n\u001b[0;32m   3465\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3466\u001b[1;33m         return DataFrameRenderer(formatter).to_csv(\n\u001b[0m\u001b[0;32m   3467\u001b[0m             \u001b[0mpath_or_buf\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3468\u001b[0m             \u001b[0mline_terminator\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mline_terminator\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\formats\\format.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, encoding, sep, columns, index_label, mode, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, errors, storage_options)\u001b[0m\n\u001b[0;32m   1103\u001b[0m             \u001b[0mformatter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfmt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1104\u001b[0m         )\n\u001b[1;32m-> 1105\u001b[1;33m         \u001b[0mcsv_formatter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1106\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1107\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mcreated_buffer\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\formats\\csvs.py\u001b[0m in \u001b[0;36msave\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    235\u001b[0m         \"\"\"\n\u001b[0;32m    236\u001b[0m         \u001b[1;31m# apply compression and byte/text conversion\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 237\u001b[1;33m         with get_handle(\n\u001b[0m\u001b[0;32m    238\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    239\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\common.py\u001b[0m in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    700\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mioargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;34m\"b\"\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mioargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    701\u001b[0m             \u001b[1;31m# Encoding\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 702\u001b[1;33m             handle = open(\n\u001b[0m\u001b[0;32m    703\u001b[0m                 \u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    704\u001b[0m                 \u001b[0mioargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data1/comp_sum_df.csv'"
      ]
     }
    ],
